Google Landin Page2

--- a/html-css/projects/002-Google Landing Page/index.html
+++ b/html-css/projects/002-Google Landing Page/index.html
@@ -32,7 +32,7 @@
             <button id="btn2" type="button" name="button">I'm Feeling Lucky</button>
         </div>
         <div class="lang">
-            <p id="language">Other Languages you AND cant use Google: <a href="#">Turkish</a> </p>
+            <p id="language">Other Languages you can use Google: <a href="#">Turkish</a> </p>
         </div>
     </main>
     <footer>
