--- a/html-css/projects/Coding Challenge/index.html
+++ b/html-css/projects/Coding Challenge/index.html
@@ -10,7 +10,7 @@
     <img id="taksimSquare" src="https://picsum.photos/id/670/600/400" alt="" />
     <p>
       Taksim Square is the most known modern city center of Istanbul. Many
-      hotels and restaurants are in or near the Square and on Istiklal Street,
+      hotels and restaurants are in or near the Square and on Istiklal Streets,
       and there is a local bus terminal for public transportation and the main
       subway station. Istiklal pedestrian street has many bars, night clubs and
       movie theaters therefore it's always busy with young people almost for 24
@@ -19,7 +19,7 @@
       in Taksim Square is the Independence Monument (Istiklal Aniti in Turkish),
       standing at the beginning of Istiklal pedestrian street. This is also the
       turnaround point for the old tram which is the only vehicle permitted on
-      Istiklal Street beside official (police and government) cars. The monument
+      Istiklal Street besidcde official (police and government) cars. The monument
       was made by the Italian sculptor Pietro Canonica and opened in 1928, it
       describes Atatürk, founder of the Republic, as a military
       commander-in-chief and a statesman. Since it's opening, the monument
