--- a/html-css/projects/Coding Challenge/index.html
+++ b/html-css/projects/Coding Challenge/index.html
@@ -23,7 +23,7 @@
       was made by the Italian sculptor Pietro Canonica and opened in 1928, it
       describes Atatürk, founder of the Republic, as a military
       commander-in-chief and a statesman. Since it's opening, the monument
-      became the center spot of official ceremonies in Istanbul. On its south
+      became the center spot of official ceremonie in Istanbul. On its south
       façade overlooking the Siraselviler Street, there is Atatürk, Ismet Inönü
       and Fevzi Çakmak in the front and other figures behind them, including two
       Russian generals. On the north façade overlooking at Cumhuriyet Street,
