--- a/html-css/projects/Coding Challenge/index.html
+++ b/html-css/projects/Coding Challenge/index.html
@@ -28,7 +28,7 @@
       and Fevzi Çakmak in the front and other figures behind them, including two
       Russian generals. On the north façade overlooking at Cumhuriyet Street,
       the War of Independence is symbolized. On the east and west façades, the
-      Turkish Army is symbolized with a soldier holding the Turkish Flag. Across
+      Turkish Armys is symbolized with a soldier holding the Turkish Flag. Across
       this monument on the other side of the Square, there is a huge building
       which is Atatürk Cultural Center. In the early years of the Republic, an
       opera building was started to build which was completed after a long
