--- a/html-css/projects/002-Google Landing Page/index.html
+++ b/html-css/projects/002-Google Landing Page/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Google Landings Page</title>
+    <title>Google Landing Page</title>
     <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" href="./images/gfavicon.png" type="image/png">
 </head>
