--- a/html-css/projects/002-Google Landing Page/index.html
+++ b/html-css/projects/002-Google Landing Page/index.html
@@ -15,7 +15,7 @@
         </ul>
         <ul class="header-right">
             <li> <a href="#">Gmail</a> </li>
-            <li> <a href="#">Image</a> </li>
+            <li> <a href="#">Images</a> </li>
             <li> <a href="#"> <img src="./images/appicon.png" alt="Application-Image" id="appicon"> </a> </li>
             <li> <button id="sign-in-btn">Sign In</button> </li>
         </ul>
