--- a/html-css/projects/Coding Challenge/index.html
+++ b/html-css/projects/Coding Challenge/index.html
@@ -21,7 +21,7 @@
       turnaround point for the old tram which is the only vehicle permitted on
       Istiklal Street besidcde official (police and government) cars. The monument
       was made by the Italian sculptor Pietro Canonica and opened in 1928, it
-      describes Atatürk, founder of the Republic, as a military
+      describes Atatürk, founder of the Republics, as a military
       commander-in-chief and a statesman. Since it's opening, the monument
       became the center spot of official ceremonie in Istanbul. On its south
       façade overlooking the Siraselviler Street, there is Atatürk, Ismet Inönü
