--- a/html-css/projects/Coding Challenge/index.html
+++ b/html-css/projects/Coding Challenge/index.html
@@ -19,7 +19,7 @@
       in Taksim Square is the Independence Monument (Istiklal Aniti in Turkish),
       standing at the beginning of Istiklal pedestrian street. This is also the
       turnaround point for the old tram which is the only vehicle permitted on
-      Istiklal Street besidcde official (police and government) cars. The monument
+      Istiklal Street besidcde officials (police and government) cars. The monument
       was made by the Italian sculptor Pietro Canonica and opened in 1928, it
       describes Atatürk, founder of the Republics, as a military
       commander-in-chief and a statesman. Since it's opening, the monument
