--- a/html-css/projects/Coding Challenge/index.html
+++ b/html-css/projects/Coding Challenge/index.html
@@ -25,7 +25,7 @@
       commander-in-chief and a statesman. Since it's opening, the monument
       became the center spot of official ceremonie in Istanbul. On its south
       façade overlooking the Siraselviler Street, there is Atatürk, Ismet Inönü
-      and Fevzi Çakmak in the front and other figures behind them, including two
+      and Fevzi Çakmak in the front and others figures behind them, including two
       Russian generals. On the north façade overlooking at Cumhuriyet Street,
       the War of Independence is symbolized. On the east and west façades, the
       Turkish Armys is symbolized with a soldier holding the Turkish Flag. Across
