--- a/html-css/projects/Coding Challenge/index.html
+++ b/html-css/projects/Coding Challenge/index.html
@@ -26,7 +26,7 @@
       became the center spot of official ceremonie in Istanbul. On its south
       façade overlooking the Siraselviler Street, there is Atatürk, Ismet Inönü
       and Fevzi Çakmak in the front and others figures behind them, including two
-      Russian generals. On the north façade overlooking at Cumhuriyet Street,
+      Russian general. On the north façade overlooking at Cumhuriyet Street,
       the War of Independence is symbolized. On the east and west façades, the
       Turkish Armys is symbolized with a soldier holding the Turkish Flag. Across
       this monument on the other side of the Square, there is a huge building
