--- a/javascript/projects/color changer/index.html
+++ b/javascript/projects/color changer/index.html
@@ -15,7 +15,7 @@
 
         <input class="colorInput" />
         <button class="button" id="setColorButton">Set color</button>
-        <button class="button" id="randomColorButton">Random colors!</button>
+        <button class="button" id="randomColorButton">Random colorss!</button>
       </div>
     </div>
     <!-- javascript -->
